# snpe_demo

./: .gitignore  CMakeLists.txt  README.md
android-ndk-r19c/: NOTICE  NOTICE.toolchain  source.properties
android-ndk-r19c/meta/: system_libs.json
android-ndk-r19c/prebuilt/android-x86/gdbserver/: gdbserver
android-ndk-r19c/prebuilt/android-x86_64/gdbserver/: gdbserver  repo.prop
android-ndk-r19c/prebuilt/linux-x86_64/lib/pkgconfig/: python-2.7.pc
android-ndk-r19c/prebuilt/linux-x86_64/lib/python2.7/: _sysconfigdata.py
android-ndk-r19c/prebuilt/linux-x86_64/lib/python2.7/config/: Makefile  config.c
android-ndk-r19c/prebuilt/linux-x86_64/lib/python2.7/lib2to3/: Grammar2.7.5.final.0.pickle
android-ndk-r19c/shader-tools/linux-x86_64/: spirv-as  spirv-cfg  spirv-dis  spirv-opt  spirv-val
android-ndk-r19c/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/include/android/: ndk-version.h
include/: Util.hpp
src/: CheckRuntime.cpp  CreateGLBuffer.cpp  CreateGLContext.cpp  SetBuilderOptions.cpp  Util.cpp  main.cpp
tools/: jpg2raw.py  ran_raw.py
tools/dst/: ILSVRC2012_val_00000001.raw  ILSVRC2012_val_00000002.raw  ILSVRC2012_val_00000003.raw  ILSVRC2012_val_00000005.raw  ILSVRC2012_val_00000006.raw  ILSVRC2012_val_00000007.raw  ILSVRC2012_val_00000008.raw  ILSVRC2012_val_00000009.raw  ILSVRC2012_val_00000010.raw  ILSVRC2012_val_00000011.raw  ILSVRC2012_val_00000012.raw  ILSVRC2012_val_00000013.raw  ILSVRC2012_val_00000016.raw  ILSVRC2012_val_00000017.raw  ILSVRC2012_val_00000018.raw  ILSVRC2012_val_00000020.raw
